# square-old

./: CMakeLists.txt  main.c  parse.c  parse.h  print.c  print.h  square.kdev4  test.sqr  text.c  text.h  utf8.c  value.c  value.h
.kdev4/: square.kdev4
